Checkin for backup purposes.  Looks like data is being received.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".TrainingActivity"/>
         <activity android:name=".DataCollectionActivity">
         </activity>
+        <service android:name=".VixiarHandheldBLEService" android:enabled="true"/>
     </application>
 
 </manifest>
