--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.sigenix.indicor">
+          package="com.vixiar.indicor">
 
     <uses-feature
         android:name="android.hardware.bluetooth_le"
@@ -16,22 +16,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.vixiar.indicor.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".TrainingActivity"/>
-        <activity android:name=".DataCollectionActivity">
+        <activity android:name="com.vixiar.indicor.TrainingActivity"/>
+        <activity android:name="com.vixiar.indicor.DataCollectionActivity">
         </activity>
 
         <service
-            android:name=".VixiarHandheldBLEService"
+            android:name="com.vixiar.indicor.VixiarHandheldBLEService"
             android:enabled="true"/>
 
-        <activity android:name=".PatInfoActivity">
+        <activity android:name="com.vixiar.indicor.PatInfoActivity">
         </activity>
     </application>
 
