--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </activity>
         <activity android:name=".PracticeActivity">
         </activity>
-        <activity android:name=".StabilityActivity">
+        <activity android:name=".TestingActivity">
         </activity>
     </application>
 
