--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
 
         <service
-            android:name=".BLE_Interface.IndicorBLEService"
+            android:name=".BLEInterface.IndicorBLEService"
             android:enabled="true"/>
 
         <activity android:name=".Activities.PatInfoActivity">
