--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,10 @@
             android:label="@string/title_activity_settings" />
         <activity
             android:name=".Activities.PDFViewActivity"
-            android:label="@string/title_activity_pdfview"></activity>
+            android:label="@string/title_activity_pdfview" />
+        <activity
+            android:name=".Activities.FactoryTestActivity"
+            android:label="FactoryTestActivity" />
     </application>
 
 </manifest>
