--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,13 +49,14 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.SettingsActivity"
-            android:label="@string/title_activity_settings" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.PDFViewActivity"
-            android:label="@string/title_activity_pdfview" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.FactoryTestActivity"
-            android:label="FactoryTestActivity" />
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
