--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId 'com.vixiar.indicor'
         minSdkVersion 23
         targetSdkVersion 27
         versionCode 22
-        versionName "1.02"
+        versionName "1.02T"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -32,8 +32,9 @@ dependencies {
     })
     compile files('Libs/GraphView-4.2.1-f8f9fa4.jar')
     compile 'com.android.support:appcompat-v7:27.0.0'
-    compile "com.android.support:support-core-utils:27.0.0"
+    compile 'com.android.support:support-core-utils:27.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.dropbox.core:dropbox-core-sdk:3.0.5'
     testCompile 'junit:junit:4.12'
+    implementation files('Libs/usbserial.jar')
 }
