--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId 'com.vixiar.indicor'
         minSdkVersion 23
@@ -26,14 +26,14 @@ android {
 
 dependencies {
     implementation 'com.android.support:support-v4:27.0.2'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile files('Libs/GraphView-4.2.1-f8f9fa4.jar')
-    compile 'com.android.support:appcompat-v7:27.0.0'
-    compile "com.android.support:support-core-utils:27.0.0"
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.dropbox.core:dropbox-core-sdk:3.0.5'
-    testCompile 'junit:junit:4.12'
+    implementation files('Libs/GraphView-4.2.1-f8f9fa4.jar')
+    implementation 'com.android.support:appcompat-v7:27.0.0'
+    implementation "com.android.support:support-core-utils:27.0.0"
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.dropbox.core:dropbox-core-sdk:3.0.5'
+    testImplementation 'junit:junit:4.12'
 }
