--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId 'com.vixiar.indicor'
-        minSdkVersion 23
-        targetSdkVersion 27
-        versionCode 29
+        minSdkVersion 25
+        targetSdkVersion 25
+        versionCode 293
         versionName "2.00"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -22,17 +22,25 @@ android {
     aaptOptions {
         noCompress "pdf"
     }
+    allprojects {
+        gradle.projectsEvaluated {
+            tasks.withType(JavaCompile) {
+                options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+            }
+        }
+    }
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:support-v13:25.4.0'
+    implementation 'com.android.support:support-compat:25.4.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation files('Libs/GraphView-4.2.1-f8f9fa4.jar')
-    implementation 'com.android.support:appcompat-v7:27.0.0'
-    implementation "com.android.support:support-core-utils:27.0.0"
+    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation "com.android.support:support-core-utils:25.4.0"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.dropbox.core:dropbox-core-sdk:3.0.5'
     testImplementation 'junit:junit:4.12'
