--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,8 @@
             android:label="@string/title_activity_settings" />
         <activity
             android:name=".Activities.PDFViewActivity"
-            android:label="@string/title_activity_pdfview"></activity>
+            android:label="@string/title_activity_pdfview" />
+        <activity android:name=".Activities.VideoActivity"></activity>
     </application>
 
 </manifest>
