--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,8 @@
         <activity
             android:name=".Activities.PDFViewActivity"
             android:label="@string/title_activity_pdfview" />
-        <activity android:name=".Activities.VideoActivity"></activity>
+        <activity android:name=".Activities.VideoActivity">
+        </activity>
     </application>
 
 </manifest>
