--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'com.vixiar.indicor2'
         minSdkVersion 25
         targetSdkVersion 26
-        versionCode 306
-        versionName "2.09"
+        versionCode 307
+        versionName "2.10"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -43,5 +43,5 @@ dependencies {
     implementation "com.android.support:support-core-utils:25.4.0"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.dropbox.core:dropbox-core-sdk:3.0.5'
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.bugsnag:bugsnag-android:4.+'
 }
