--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'com.vixiar.indicor2'
         minSdkVersion 25
         targetSdkVersion 26
-        versionCode 314
-        versionName "3.00.B"
+        versionCode 316
+        versionName "3.00.D"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -32,16 +32,12 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-v13:25.4.0'
-    implementation 'com.android.support:support-compat:25.4.0'
+    implementation 'com.android.support:support-v13:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-compat:28.0.0'
+    implementation "com.android.support:support-core-utils:28.0.0"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     implementation files('Libs/GraphView-4.2.1-f8f9fa4.jar')
-    implementation 'com.android.support:appcompat-v7:25.4.0'
-    implementation "com.android.support:support-core-utils:25.4.0"
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.dropbox.core:dropbox-core-sdk:3.0.5'
     implementation 'com.bugsnag:bugsnag-android:4.+'
 }
