--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 26
         versionCode 325
-        versionName "3.01"
+        versionName "3.01Onyx"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
